--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -15,9 +15,17 @@ layout: layout
   {% include sidebar.html %}
   <div class="top-line"></div>
   <br><br>
-  <div class="container-fluid" style="z-index: -1; height: 100%;" id="main-area">
+  <div class="container-fluid" style="z-index: -1; height: 100%;  min-height: 100%;" id="main-area">
     {{ content }}
   </div>
+  <section class="content container-fluid">
+    <div class="footer">
+        <section class="thanks text-left" style="">
+            <span>Have an</span>
+            <span><a style="" onClick="emojiRain.animate()" class="heart" aria-hidden="true">a>🥑cad🥑</a></span>
+        </section>
+    </div>
+</section>
   <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script defer src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
     integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
@@ -25,7 +33,7 @@ layout: layout
   <script defer src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
     integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
     crossorigin="anonymous"></script>
-  <script defer type="text/javascript" src="{{ site.url }}/js/application.js"></script>
+  <script defer type="text/javascript" src="../js/application.js"></script>
   <script async src="https://use.fontawesome.com/b5dcbf0faa.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r119/three.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vanta@0.5.21/dist/vanta.fog.min.js"></script>
@@ -46,8 +54,6 @@ layout: layout
       zoom: 0.90
     })
     </script> -->
-
-
 </body>
 
 </html>
