--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
   </noscript>
 
-  <link rel="preload" href="{{ site.url }}/css/base.css" as="style"
+  <link rel="preload" href="/css/base.css" as="style"
     onload="this.onload=null;this.rel='stylesheet'" media="screen, projection">
   <noscript>
     <link rel="stylesheet" href="{{ site.url }}/css/base.css" media="screen, projection">
