Refactor 🍙🍚 home page to be the aboutme page. Redirect home to projects

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -52,10 +52,10 @@
 
 
           <nav class="sections">
-            <ul>
-              <li><a class="profile-name" href="/">about</a></li>
-              <li><a target="_blank" href="/Jonasz_Rice_Resume.pdf">résumé</a></li>
-              <li><a href="/projects">projects</a></li>
+            <ul id="sidebar-page-list">
+              <li><a class="profile-name" href="/aboutme">About Me</a></li>
+              <li><a target="_blank" href="/Jonasz_Rice_Resume.pdf">Résumé</a></li>
+              <li><a href="/projects">Projects</a></li>
             </ul>
           </nav>
 
