Update with legal name

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -29,7 +29,7 @@
                 title="Follow me on GitHub" aria-label="Follow me on GitHub"><i class="fa fa-github"></i></a></div>
 
             <!-- LinkedIn Button -->
-            <div class="col-6 p-0 pl-1 text-left"><a href="https://www.linkedin.com/in/jonasz-karwacki/" target="_blank"
+            <div class="col-6 p-0 pl-1 text-left"><a href="https://www.linkedin.com/in/erinak/" target="_blank"
                 title="Find me on LinkedIn" aria-label="Find me on LinkedIn"><i class="fa fa-linkedin"></i></a></div>
 
             <!-- Medium Button -->
@@ -37,7 +37,7 @@
                 aria-label="My blog" title="My blog"><i class="fa fa-medium"></i></a></div>
 
             <!-- Email Button -->
-            <div class="col-6 p-0 pl-1 text-left"><a href="mailto:jonaszakr@gmail.com?subject=hi jonasz!"
+            <div class="col-6 p-0 pl-1 text-left"><a href="mailto:erinakarice@gmail.com?subject=hi erin!"
                 target="_blank" title="Email me" aria-label="Email me"><i class="fa fa-envelope-o"></i></a></div>
 
           </div>
@@ -54,7 +54,7 @@
           <nav class="sections">
             <ul id="sidebar-page-list">
               <li><a class="profile-name" href="/aboutme">About Me</a></li>
-              <li><a target="_blank" href="/Jonasz_Rice_Resume.pdf">Résumé</a></li>
+              <li><a target="_blank" href="/Erin\ Akarice\ Resume.pdf">Résumé</a></li>
               <li><a href="/projects">Projects</a></li>
             </ul>
           </nav>
