--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -54,7 +54,7 @@
           <nav class="sections">
             <ul id="sidebar-page-list">
               <li><a class="profile-name" href="/aboutme">About Me</a></li>
-              <li><a target="_blank" href="/Erin\ Akarice\ Resume.pdf">Résumé</a></li>
+              <li><a target="_blank" href="/Erin%20Akarice%20Resume.pdf">Résumé</a></li>
               <li><a href="/projects">Projects</a></li>
             </ul>
           </nav>
