Use Laplacian instead of Sobel

--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -22,7 +22,7 @@ layout: layout
     <div class="footer">
         <section class="thanks text-left" style="">
             <span>Have an</span>
-            <span><a style="" onClick="emojiRain.animate()" class="heart" aria-hidden="true">a>🥑cad🥑</a></span>
+            <span><a style="" onClick="makeItRain()" class="heart" aria-hidden="true">a>🥑cad🥑</a></span>
         </section>
     </div>
 </section>
