Update sidebar.html with medium

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -33,7 +33,7 @@
                 title="Find me on LinkedIn" aria-label="Find me on LinkedIn"><i class="fa fa-linkedin"></i></a></div>
 
             <!-- Medium Button -->
-            <div class="col-6 p-0 pr-1 text-right"><a href="https://medium.com/@jonaszk" target="_blank"
+            <div class="col-6 p-0 pr-1 text-right"><a href="https://medium.com/@erinak" target="_blank"
                 aria-label="My blog" title="My blog"><i class="fa fa-medium"></i></a></div>
 
             <!-- Email Button -->
